5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4354/executions/1771_3121.log
== TEST (2019-05-21 23:31:31) 
-- CODE:
from numpy import *
ve = array(eval(input("jogadas de Eusápia: ")))
vb = array(eval(input("jogadas de Barsanulfo: ")))
i = 0
soma_e = 0
soma_b = 0
valor_e = 0
valor_b = 0
while(i < size(ve)):
	if(ve[i] == 33 and vb[i] == 22):
		valor_e = 1
	elif(ve[i] == 22 and vb[i] == 11):
		valor_e = 1
	elif(ve[i] == 11 and vb[i] == 33):
		valor_e = 1
	elif(ve[i] == 11 and vb[i] == 11):
		valor_e = 0
		valor_b = 0
	elif(ve[i] == 22 and vb[i] == 22):
		valor_e = 0
		valor_b = 0
	elif(ve[i] == 33 and vb[i] == 33):
		valor_e = 0
		valor_b = 0
	elif(ve[i] == 22 and vb[i] == 33):
		valor_b = 1
	elif(ve[i] == 33 and vb[i] == 11):
		valor_b = 1
	elif(ve[i] == 11 and vb[i] == 22):
		valor_b = 1
	soma_b = soma_b + valor_b
	soma_e = soma_e + valor_e
	i = i + 1
print(soma_e)
print(soma_b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 23:31:40) 
-- CODE:
from numpy import *
ve = array(eval(input("jogadas de Eusapia: ")))
vb = array(eval(input("jogadas de Barsanulfo: ")))
i = 0
soma_e = 0
soma_b = 0
valor_e = 0
valor_b = 0
while(i < size(ve)):
	if(ve[i] == 33 and vb[i] == 22):
		valor_e = 1
	elif(ve[i] == 22 and vb[i] == 11):
		valor_e = 1
	elif(ve[i] == 11 and vb[i] == 33):
		valor_e = 1
	elif(ve[i] == 11 and vb[i] == 11):
		valor_e = 0
		valor_b = 0
	elif(ve[i] == 22 and vb[i] == 22):
		valor_e = 0
		valor_b = 0
	elif(ve[i] == 33 and vb[i] == 33):
		valor_e = 0
		valor_b = 0
	elif(ve[i] == 22 and vb[i] == 33):
		valor_b = 1
	elif(ve[i] == 33 and vb[i] == 11):
		valor_b = 1
	elif(ve[i] == 11 and vb[i] == 22):
		valor_b = 1
	soma_b = soma_b + valor_b
	soma_e = soma_e + valor_e
	i = i + 1
print(soma_e)
print(soma_b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 23:32:25) 
-- CODE:
from numpy import *
ve = array(eval(input("jogadas de Eusapia: ")))
vb = array(eval(input("jogadas de Barsanulfo: ")))
i = 0
soma_e = 0
soma_b = 0
valor_e = 0
valor_b = 0
while(i < size(ve)):
	if(ve[i] == 33 and vb[i] == 22):
		valor_e = 1
	elif(ve[i] == 22 and vb[i] == 11):
		valor_e = 1
	elif(ve[i] == 11 and vb[i] == 33):
		valor_e = 1
	elif(ve[i] == 11 and vb[i] == 11):
		valor_e = 0
		valor_b = 0
	elif(ve[i] == 22 and vb[i] == 22):
		valor_e = 0
		valor_b = 0
	elif(ve[i] == 33 and vb[i] == 33):
		valor_e = 0
		valor_b = 0
	elif(ve[i] == 22 and vb[i] == 33):
		valor_b = 1
	elif(ve[i] == 33 and vb[i] == 11):
		valor_b = 1
	elif(ve[i] == 11 and vb[i] == 22):
		valor_b = 1
	soma_b = soma_b + valor_b
	soma_e = soma_e + valor_e
	i = i + 1
print(soma_e)
print(soma_b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 23:40:17) 
-- CODE:
from numpy import *
ve = array(eval(input("jogadas de Eusapia: ")))
vb = array(eval(input("jogadas de Barsanulfo: ")))
i = 0
soma_e = 0
soma_b = 0
valor_e = 0
valor_b = 0
while(i < size(ve)):
	if(ve[i] == 33 and vb[i] == 22):
		valor_e = 1
		valor_b = 0
	elif(ve[i] == 22 and vb[i] == 11):
		valor_e = 1
		valor_b = 0
	elif(ve[i] == 11 and vb[i] == 33):
		valor_e = 1
		valor_ b = 0
	elif(ve[i] == 11 and vb[i] == 11):
		valor_e = 0
		valor_b = 0
	elif(ve[i] == 22 and vb[i] == 22):
		valor_e = 0
		valor_b = 0
	elif(ve[i] == 33 and vb[i] == 33):
		valor_e = 0
		valor_b = 0
	elif(ve[i] == 22 and vb[i] == 33):
		valor_b = 1
		valor_e = 0
	elif(ve[i] == 33 and vb[i] == 11):
		valor_b = 1
		valor_e = 0
	elif(ve[i] == 11 and vb[i] == 22):
		valor_b = 1
		valor_e = 0
	soma_b = soma_b + valor_b
	soma_e = soma_e + valor_e
	i = i + 1
print(soma_e)
print(soma_b)
-- ERROR:
File "XXXX", line 18
    valor_ b = 0
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 23:40:30) 
-- CODE:
from numpy import *
ve = array(eval(input("jogadas de Eusapia: ")))
vb = array(eval(input("jogadas de Barsanulfo: ")))
i = 0
soma_e = 0
soma_b = 0
valor_e = 0
valor_b = 0
while(i < size(ve)):
	if(ve[i] == 33 and vb[i] == 22):
		valor_e = 1
		valor_b = 0
	elif(ve[i] == 22 and vb[i] == 11):
		valor_e = 1
		valor_b = 0
	elif(ve[i] == 11 and vb[i] == 33):
		valor_e = 1
		valor_b = 0
	elif(ve[i] == 11 and vb[i] == 11):
		valor_e = 0
		valor_b = 0
	elif(ve[i] == 22 and vb[i] == 22):
		valor_e = 0
		valor_b = 0
	elif(ve[i] == 33 and vb[i] == 33):
		valor_e = 0
		valor_b = 0
	elif(ve[i] == 22 and vb[i] == 33):
		valor_b = 1
		valor_e = 0
	elif(ve[i] == 33 and vb[i] == 11):
		valor_b = 1
		valor_e = 0
	elif(ve[i] == 11 and vb[i] == 22):
		valor_b = 1
		valor_e = 0
	soma_b = soma_b + valor_b
	soma_e = soma_e + valor_e
	i = i + 1
print(soma_e)
print(soma_b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 23:43:28) 
-- CODE:
from numpy import *
ve = array(eval(input("jogadas de Eusapia: ")))
vb = array(eval(input("jogadas de Barsanulfo: ")))
i = 0
soma_e = 0
soma_b = 0
valor_e = 0
valor_b = 0
while(i < size(ve)):
	if(ve[i] == 33 and vb[i] == 22):
		valor_e = 1
		valor_b = 0
	elif(ve[i] == 22 and vb[i] == 11):
		valor_e = 1
		valor_b = 0
	elif(ve[i] == 11 and vb[i] == 33):
		valor_e = 1
		valor_b = 0
	elif(ve[i] == 11 and vb[i] == 11):
		valor_e = 0
		valor_b = 0
	elif(ve[i] == 22 and vb[i] == 22):
		valor_e = 0
		valor_b = 0
	elif(ve[i] == 33 and vb[i] == 33):
		valor_e = 0
		valor_b = 0
	elif(ve[i] == 22 and vb[i] == 33):
		valor_b = 1
		valor_e = 0
	elif(ve[i] == 33 and vb[i] == 11):
		valor_b = 1
		valor_e = 0
	elif(ve[i] == 11 and vb[i] == 22):
		valor_b = 1
		valor_e = 0
	soma_b = soma_b + valor_b
	soma_e = soma_e + valor_e
	i = i + 1
print(soma_e)
print(soma_b)
if(soma_b == soma_e):
	print("EMPATE")
if(soma_b>soma_e):
	print("BARSANULFO")
if(soma_e>soma_b):
	print("EUSAPIA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 23:46:53) 
-- CODE:
from numpy import *
ve = array(eval(input("jogadas de Eusapia: ")))
vb = array(eval(input("jogadas de Barsanulfo: ")))
i = 0
soma_e = 0
soma_b = 0
valor_e = 0
valor_b = 0
while(i < size(ve)):
	if(ve[i] == 33 and vb[i] == 22):
		valor_e = 1
		valor_b = 0
	elif(ve[i] == 22 and vb[i] == 11):
		valor_e = 1
		valor_b = 0
	elif(ve[i] == 11 and vb[i] == 33):
		valor_e = 1
		valor_b = 0
	elif(ve[i] == 11 and vb[i] == 11):
		valor_e = 0
		valor_b = 0
	elif(ve[i] == 22 and vb[i] == 22):
		valor_e = 0
		valor_b = 0
	elif(ve[i] == 33 and vb[i] == 33):
		valor_e = 0
		valor_b = 0
	elif(ve[i] == 22 and vb[i] == 33):
		valor_b = 1
		valor_e = 0
	elif(ve[i] == 33 and vb[i] == 11):
		valor_b = 1
		valor_e = 0
	elif(ve[i] == 11 and vb[i] == 22):
		valor_b = 1
		valor_e = 0
	soma_b = soma_b + valor_b
	soma_e = soma_e + valor_e
	i = i + 1
print(soma_e)
print(soma_b)
if(soma_b == soma_e):
	print("EMPATE")
if(soma_b>soma_e):
	print("BARSANULFO")
if(soma_e>soma_b):
	print("EUSAPIA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 23:48:34) 
-- CODE:
from numpy import *
ve = array(eval(input("jogadas de Eusapia: ")))
vb = array(eval(input("jogadas de Barsanulfo: ")))
i = 0
soma_e = 0
soma_b = 0
valor_e = 0
valor_b = 0
while(i < size(ve)):
	if(ve[i] == 33 and vb[i] == 22):
		valor_e = 1
		valor_b = 0
	elif(ve[i] == 22 and vb[i] == 11):
		valor_e = 1
		valor_b = 0
	elif(ve[i] == 11 and vb[i] == 33):
		valor_e = 1
		valor_b = 0
	elif(ve[i] == 11 and vb[i] == 11):
		valor_e = 0
		valor_b = 0
	elif(ve[i] == 22 and vb[i] == 22):
		valor_e = 0
		valor_b = 0
	elif(ve[i] == 33 and vb[i] == 33):
		valor_e = 0
		valor_b = 0
	elif(ve[i] == 22 and vb[i] == 33):
		valor_b = 1
		valor_e = 0
	elif(ve[i] == 33 and vb[i] == 11):
		valor_b = 1
		valor_e = 0
	elif(ve[i] == 11 and vb[i] == 22):
		valor_b = 1
		valor_e = 0
	soma_b = soma_b + valor_b
	soma_e = soma_e + valor_e
	i = i + 1
print(soma_e)
print(soma_b)
if(soma_b == soma_e):
	print("EMPATE")
if(soma_b>soma_e):
	print("BARSANULFO")
if(soma_e>soma_b):
	print("EUSAPIA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 23:49:03) 
-- CODE:
from numpy import *
ve = array(eval(input("jogadas de Eusapia: ")))
vb = array(eval(input("jogadas de Barsanulfo: ")))
i = 0
soma_e = 0
soma_b = 0
valor_e = 0
valor_b = 0
while(i < size(ve)):
	if(ve[i] == 33 and vb[i] == 22):
		valor_e = 1
		valor_b = 0
	elif(ve[i] == 22 and vb[i] == 11):
		valor_e = 1
		valor_b = 0
	elif(ve[i] == 11 and vb[i] == 33):
		valor_e = 1
		valor_b = 0
	elif(ve[i] == 11 and vb[i] == 11):
		valor_e = 0
		valor_b = 0
	elif(ve[i] == 22 and vb[i] == 22):
		valor_e = 0
		valor_b = 0
	elif(ve[i] == 33 and vb[i] == 33):
		valor_e = 0
		valor_b = 0
	elif(ve[i] == 22 and vb[i] == 33):
		valor_b = 1
		valor_e = 0
	elif(ve[i] == 33 and vb[i] == 11):
		valor_b = 1
		valor_e = 0
	elif(ve[i] == 11 and vb[i] == 22):
		valor_b = 1
		valor_e = 0
	soma_b = soma_b + valor_b
	soma_e = soma_e + valor_e
	i = i + 1
print(soma_e)
print(soma_b)
if(soma_b == soma_e):
	print("EMPATE")
if(soma_b>soma_e):
	print("BARSANULFO")
if(soma_e>soma_b):
	print("EUSAPIA")
-- EXECUTION TIME:
0.336965
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
6
3
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
5
5
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
5
7
BARSANULFO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 23:50:37) 
-- CODE:
from numpy import *
ve = array(eval(input("jogadas de Eusapia: ")))
vb = array(eval(input("jogadas de Barsanulfo: ")))
i = 0
soma_e = 0
soma_b = 0
valor_e = 0
valor_b = 0
while(i < size(ve)):
	if(ve[i] == 33 and vb[i] == 22):
		valor_e = 1
		valor_b = 0
	elif(ve[i] == 22 and vb[i] == 11):
		valor_e = 1
		valor_b = 0
	elif(ve[i] == 11 and vb[i] == 33):
		valor_e = 1
		valor_b = 0
	elif(ve[i] == 11 and vb[i] == 11):
		valor_e = 0
		valor_b = 0
	elif(ve[i] == 22 and vb[i] == 22):
		valor_e = 0
		valor_b = 0
	elif(ve[i] == 33 and vb[i] == 33):
		valor_e = 0
		valor_b = 0
	elif(ve[i] == 22 and vb[i] == 33):
		valor_b = 1
		valor_e = 0
	elif(ve[i] == 33 and vb[i] == 11):
		valor_b = 1
		valor_e = 0
	elif(ve[i] == 11 and vb[i] == 22):
		valor_b = 1
		valor_e = 0
	soma_b = soma_b + valor_b
	soma_e = soma_e + valor_e
	i = i + 1
print(size(ve))
if(soma_b == soma_e):
	print("EMPATE")
if(soma_b>soma_e):
	print("BARSANULFO")
if(soma_e>soma_b):
	print("EUSAPIA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 23:50:49) 
-- CODE:
from numpy import *
ve = array(eval(input("jogadas de Eusapia: ")))
vb = array(eval(input("jogadas de Barsanulfo: ")))
i = 0
soma_e = 0
soma_b = 0
valor_e = 0
valor_b = 0
while(i < size(ve)):
	if(ve[i] == 33 and vb[i] == 22):
		valor_e = 1
		valor_b = 0
	elif(ve[i] == 22 and vb[i] == 11):
		valor_e = 1
		valor_b = 0
	elif(ve[i] == 11 and vb[i] == 33):
		valor_e = 1
		valor_b = 0
	elif(ve[i] == 11 and vb[i] == 11):
		valor_e = 0
		valor_b = 0
	elif(ve[i] == 22 and vb[i] == 22):
		valor_e = 0
		valor_b = 0
	elif(ve[i] == 33 and vb[i] == 33):
		valor_e = 0
		valor_b = 0
	elif(ve[i] == 22 and vb[i] == 33):
		valor_b = 1
		valor_e = 0
	elif(ve[i] == 33 and vb[i] == 11):
		valor_b = 1
		valor_e = 0
	elif(ve[i] == 11 and vb[i] == 22):
		valor_b = 1
		valor_e = 0
	soma_b = soma_b + valor_b
	soma_e = soma_e + valor_e
	i = i + 1
print(size(ve))
if(soma_b == soma_e):
	print("EMPATE")
if(soma_b>soma_e):
	print("BARSANULFO")
if(soma_e>soma_b):
	print("EUSAPIA")
-- EXECUTION TIME:
0.530347
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:18:33) 
-- CODE:
from numpy import *
ve = array(eval(input("jogadas de Eusapia: ")))
vb = array(eval(input("jogadas de Barsanulfo: ")))
i = 0
soma_e = 0
soma_b = 0
valor_e = 0
valor_b = 0
while(i < size(ve)):
	if(ve[i] == 33 and vb[i] == 22):
		valor_e = 1
		valor_b = 0
	elif(ve[i] == 22 and vb[i] == 11):
		valor_e = 1
		valor_b = 0
	elif(ve[i] == 11 and vb[i] == 33):
		valor_e = 1
		valor_b = 0
	elif(ve[i] == 11 and vb[i] == 11):
		valor_e = 0
		valor_b = 0
	elif(ve[i] == 22 and vb[i] == 22):
		valor_e = 0
		valor_b = 0
	elif(ve[i] == 33 and vb[i] == 33):
		valor_e = 0
		valor_b = 0
	elif(ve[i] == 22 and vb[i] == 33):
		valor_b = 1
		valor_e = 0
	elif(ve[i] == 33 and vb[i] == 11):
		valor_b = 1
		valor_e = 0
	elif(ve[i] == 11 and vb[i] == 22):
		valor_b = 1
		valor_e = 0
	soma_b = soma_b + valor_b
	soma_e = soma_e + valor_e
	i = i + 1
print(size(ve))
if(soma_b == soma_e):
	print("EMPATE")
if(soma_b>soma_e):
	print("BARSANULFO")
if(soma_e>soma_b):
	print("EUSAPIA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:21:03) 
-- CODE:
from numpy import *
ve = array(eval(input("jogadas de Eusapia: ")))
vb = array(eval(input("jogadas de Barsanulfo: ")))
i = 0
soma_e = 0
soma_b = 0
valor_e = 0
valor_b = 0
while(i < size(ve)):
	if(ve[i] == 33 and vb[i] == 22):
		valor_e = 1
		valor_b = 0
	elif(ve[i] == 22 and vb[i] == 11):
		valor_e = 1
		valor_b = 0
	elif(ve[i] == 11 and vb[i] == 33):
		valor_e = 1
		valor_b = 0
	elif(ve[i] == 11 and vb[i] == 11):
		valor_e = 0
		valor_b = 0
	elif(ve[i] == 22 and vb[i] == 22):
		valor_e = 0
		valor_b = 0
	elif(ve[i] == 33 and vb[i] == 33):
		valor_e = 0
		valor_b = 0
	elif(ve[i] == 22 and vb[i] == 33):
		valor_b = 1
		valor_e = 0
	elif(ve[i] == 33 and vb[i] == 11):
		valor_b = 1
		valor_e = 0
	elif(ve[i] == 11 and vb[i] == 22):
		valor_b = 1
		valor_e = 0
	soma_b = soma_b + valor_b
	soma_e = soma_e + valor_e
	i = i + 1
print(size(ve))
if(soma_b == soma_e):
	print("EMPATE")
if(soma_b>soma_e):
	print("BARSANULFO")
if(soma_e>soma_b):
	print("EUSAPIA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
